--- a/src/Hjmos.BaseControls/Themes/Styles/Base/SearchBarBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/SearchBarBaseStyle.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:interactivity="clr-namespace:Hjmos.BaseControls.Interactivity">
+                    xmlns:interactivity="clr-namespace:Hjmos.BaseControls.Interactivity"
+                    >
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="TextBoxBaseStyle.xaml"/>
@@ -11,32 +12,50 @@
 
     <Style TargetType="controls:SearchBar" x:Key="SearchBarBaseStyle" BasedOn="{StaticResource TextBoxBaseStyle}">
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="controls:BorderElement.CornerRadius" Value="0"/>
+        <Setter Property="CaretBrush" Value="{Binding Foreground ,RelativeSource={RelativeSource Mode=Self}}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:SearchBar">
                     <controls:SimplePanel>
-                        <Border x:Name="templateRoot"   CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius),RelativeSource={RelativeSource Mode=TemplatedParent}}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}">
+                        <Border x:Name="templateRoot"  CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius),RelativeSource={RelativeSource Mode=TemplatedParent}}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="25"/>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock HorizontalAlignment="Stretch" Text="{Binding Path=(controls:InfoElement.Placeholder),RelativeSource={RelativeSource TemplatedParent}}"  Grid.Column="0" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Style="{StaticResource TextBlockDefaultThiLight}" Margin="{TemplateBinding Padding}" Visibility="{TemplateBinding Text,Converter={StaticResource String2VisibilityReConverter}}"/>
+                                <TextBlock x:Name="PART_Placeholder" HorizontalAlignment="Stretch" Text="{Binding Path=(controls:InfoElement.Placeholder),RelativeSource={RelativeSource TemplatedParent}}"  Grid.Column="0" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Style="{StaticResource TextBlockDefaultThiLight}" Margin="{TemplateBinding Padding}" Visibility="{TemplateBinding Text,Converter={StaticResource String2VisibilityReConverter}}"/>
                                 <ScrollViewer Margin="-2,0" Grid.Column="0" Padding="{TemplateBinding Padding}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" x:Name="PART_ContentHost" Focusable="False" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
-                                <Button Height="{x:Static system:Double.NaN}"  Command="interactivity:ControlCommands.Search" Style="{StaticResource ButtonIcon}" Padding="7,6" controls:IconElement.Geometry="{StaticResource SearchGeometry}"  Grid.Column="1" Foreground="{Binding BorderBrush,ElementName=templateRoot}" Focusable="False" />
+                                <Button Height="{x:Static system:Double.NaN}" Command="interactivity:ControlCommands.Clear" Visibility="Collapsed" Name="ButtonClear" Width="16" Grid.Column="1" Style="{StaticResource ButtonIcon}" Padding="0,6" controls:IconElement.Geometry="{StaticResource DeleteFillCircleGeometry}" Foreground="{Binding BorderBrush,ElementName=templateRoot}"/>
+                                <Button x:Name="PART_Search" Height="{x:Static system:Double.NaN}"  BorderThickness="0" Command="interactivity:ControlCommands.Search" Style="{StaticResource ButtonIcon}" Padding="7,6" controls:IconElement.Geometry="{StaticResource SearchGeometry}"  Grid.Column="2" Foreground="{Binding BorderBrush,ElementName=templateRoot}" Focusable="False" />
                             </Grid>
                         </Border>
                         <Path x:Name="PathBorder" Fill="Transparent" Stroke="{TemplateBinding BorderBrush}"  SnapsToDevicePixels="True" Stretch="Fill"  Data="{TemplateBinding controls:BorderElement.Geometry}"/>
                     </controls:SimplePanel>
                     <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True" SourceName="PART_Search">
+                            <Setter Property="Cursor" Value="Hand"/>
+                        </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" TargetName="templateRoot" Value="0.4"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource SecondaryBorderBrush}"/>
                         </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver" Value="true" SourceName="templateRoot"/>
+                                <Condition Property="ShowClearButton" Value="true"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Visibility" Value="Visible" TargetName="ButtonClear"/>
+                        </MultiTrigger>
+                        <Trigger Property="Text" Value="{x:Static system:String.Empty}">
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="ButtonClear"/>
+                        </Trigger>
                         <Trigger Property="IsFocused" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource PrimaryBrush}"/>
+                            <Setter Property="Opacity" Value=".4" TargetName="PART_Placeholder"/>
                         </Trigger>
                         <Trigger Property="controls:BorderElement.Geometry" Value="{x:Null}">
                             <Setter Property="Visibility" Value="Collapsed" TargetName="PathBorder"/>
