--- a/src/Hjmos.BaseControls/Themes/Basic/Geometries.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Geometries.xaml
@@ -66,7 +66,7 @@
         </CombinedGeometry.Geometry2>
     </CombinedGeometry>
 
-    <GeometryGroup x:Key="Rect2">
+    <GeometryGroup o:Freeze="True" x:Key="Rect2">
         <PathGeometry>M0,30 L0,0 230,0 230,30</PathGeometry>
         <Geometry>M0,52 L0,82 230,82 230,52</Geometry>
     </GeometryGroup>
